--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.19.0",
     "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
