--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test_game_model": "mocha -r ts-node/register test/test_game_model.ts --exit",
     "test_sport_model": "mocha -r ts-node/register test/test_sport_model.ts --exit",
     "test_game_retrieval": "mocha -r ts-node/register test/test_game_retrieval.ts --exit",
+    "test_elo_system": "mocha -r ts-node/register test/test_elo_system.ts --exit",
     "test": "mocha -r ts-node/register test/*.ts --exit"
   },
   "keywords": [],
