--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^5.2.1",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.19.0",
+    "mongodb": "^6.14.0",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
