--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/multer": "^2.0.0",
     "@types/sharp": "^0.31.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "connect-mongo": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
