--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sharp": "^0.34.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
     "@types/express-session": "^1.18.2",
