--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "build": "npm install && tsc",
     "start": "node dist/backend/server.js",
     "dev": "nodemon src/backend/server.ts",
-    "test_db_connection": "mocha -r ts-node/register test/test_db_connection.ts --exit",
-    "test_user_model": "mocha -r ts-node/register test/test_user_model.ts --exit",
-    "test_unique_username": "mocha -r ts-node/register test/test_unique_username.ts --exit",
-    "test_places_api": "mocha -r ts-node/register test/test_places_api.ts --exit",
-    "test_user_api": "mocha -r ts-node/register test/test_user_api.ts --exit",
-    "test_login": "mocha -r ts-node/register test/test_login.ts --exit",
-    "test_game_model": "mocha -r ts-node/register test/test_game_model.ts --exit",
-    "test_sport_model": "mocha -r ts-node/register test/test_sport_model.ts --exit",
-    "test_game_retrieval": "mocha -r ts-node/register test/test_game_retrieval.ts --exit",
-    "test_elo_system": "mocha -r ts-node/register test/test_elo_system.ts --exit",
-    "test": "mocha -r ts-node/register test/*.ts --exit"
+    "test_db_connection": "NODE_ENV=test mocha -r ts-node/register test/test_db_connection.ts --exit",
+    "test_user_model": "NODE_ENV=test mocha -r ts-node/register test/test_user_model.ts --exit",
+    "test_unique_username": "NODE_ENV=test mocha -r ts-node/register test/test_unique_username.ts --exit",
+    "test_places_api": "NODE_ENV=test mocha -r ts-node/register test/test_places_api.ts --exit",
+    "test_user_api": "NODE_ENV=test mocha -r ts-node/register test/test_user_api.ts --exit",
+    "test_game_api": "NODE_ENV=test mocha -r ts-node/register test/test_game_api.ts --exit",
+    "test_login": "NODE_ENV=test mocha -r ts-node/register test/test_login.ts --exit",
+    "test_game_model": "NODE_ENV=test mocha -r ts-node/register test/test_game_model.ts --exit",
+    "test_sport_model": "NODE_ENV=test mocha -r ts-node/register test/test_sport_model.ts --exit",
+    "test_game_retrieval": "NODE_ENV=test mocha -r ts-node/register test/test_game_retrieval.ts --exit",
+    "test_elo_system": "NODE_ENV=test mocha -r ts-node/register test/test_elo_system.ts --exit",
+    "test": "NODE_ENV=test mocha -r ts-node/register test/*.ts --exit"
   },
   "keywords": [],
   "author": "",
