--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/multer": "^2.0.0",
     "@types/sharp": "^0.31.1",
     "bcrypt": "^6.0.0",
+    "bootstrap": "^5.3.8",
     "cloudinary": "^2.9.0",
     "connect-mongo": "^6.0.0",
     "dotenv": "^17.2.3",
@@ -39,7 +40,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "sharp": "^0.34.5"
+    "sass": "^1.97.3",
+    "sharp": "^0.34.5",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.2.0",
