--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,11 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "src/vue-frontend"
+  ]
 }
