--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongodb": "^6.14.0",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
@@ -48,6 +49,7 @@
     "@types/mocha": "^10.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^25.1.0",
+    "@types/nodemailer": "^7.0.9",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-local": "^1.0.38",
