--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.2.0",
