--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/supertest": "^6.0.3",
     "mocha": "^11.7.5",
     "nodemon": "^3.1.11",
+    "prettier": "^3.8.1",
     "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
