--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@scalar/api-reference": "^1.44.20",
     "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.8",
@@ -39,7 +40,8 @@
     "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "vue-i18n": "^11.2.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^10.2.0",
